# config_um_wcc

./: README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml
src/config_project_template/support_data/sensors/ZWO_ASI6200MM/: ZWO_ASI6200MM_Pro_QE_curve.csv  readme.md
src/config_um_wcc/: __init__.py
src/config_um_wcc/configs/: E2ES_default.toml  WCC_ETC.toml  common_params.toml
src/config_um_wcc/support_data/coatings/: README.md
src/config_um_wcc/support_data/filters/: README  SLOAN_SDSS.gprime_filter.fits  SLOAN_SDSS.iprime_filter.fits  SLOAN_SDSS.rprime_filter.fits  SLOAN_SDSS.uprime_filter.fits  SLOAN_SDSS.zprime_filter.fits
src/config_um_wcc/support_data/sensors/: README.md
src/config_um_wcc/support_data/sensors/ZWO_ASI6200MM/: ZWO_ASI6200MM_Pro_Dark_Current_vs_Sensor_Temperature.csv  ZWO_ASI6200MM_Pro_Gain_vs_Gain_Setting.csv  ZWO_ASI6200MM_Pro_Read_Noise_vs_Gain_Setting.csv  ZWO_ASI6200MM_Pro_Well_Depth_vs_Gain_Setting.csv
src/config_um_wcc/support_data/targets/: README.md
tests/: test_config_files.py  test_version_consistency.py
