[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta" 

[project]
name = "config_um_wcc"
description = "Master config loader for um project at UASAL" 
readme = "README.md"
license = { text = "GNU GENERAL PUBLIC LICENSE - Verison 3" }
requires-python = ">=3.8"
dependencies = [
    "utils_config @ git+https://github.com/uasal/utils_config.git@develop"  
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/uasal/config_um_wcc/blob/main/README.md" 
Changelog = "https://github.com/uasal/config_um_wcc/blob/main/CHANGELOG.md" 
Repository = "https://github.com/uasal/config_um_wcc" 

[tool.setuptools]
packages = ["config_um_wcc"] 
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools_scm]
write_to = "src/config_um_wcc/_version.py" 
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.pytest.ini_options]
testpaths = [
	"tests",
]

[tool.coverage.run]
omit=["src/config_um_wcc/_version.py"]  

[tool.setuptools.package-data]
"config_um_wcc" = ["support_data/**/*", "configs/**/*.toml"] 
